# cvxopf

./: .gitignore  CLAUDE.md  LICENSE  README.md  VIBE.md  pyproject.toml
.plans/: battery_test_suite_plan.md
examples/: README.md  case118_sparse_vs_dense_ac.py  case14_ac_vs_dc.py  case14_formulation_comparison.py  case14_lossy_dc.py  case14_single_step.py  case30pwl_ac.py  case57_sparse_vs_dense_ac.py  case9_hvdc_ac.py  case9_hvdc_dc.py  case9_multistep_flat_load.py  case9_multistep_nondispatchable_ac.py  case9_nondispatchable_dc.py  case9_single_step.py  case9_singlenode_dc.py  case9_storage_ac.py  case9_storage_ac_24h.py  case9_storage_dc.py  case9_storage_dc_24h.py
memories/: M16-in-flight-record.md  MEMORY.md  case9-dcline-branch-limit-gap.md  case9-dcline-optima-gap.md  cvxopf-session-working-style.md  cvxpy-affine-equality-rule.md  dnlp-canonicalization-tractability-thesis.md  flow-battery-mode-dependent-standby-loss.md  harness-tool-issues.md  hvdc-plan-mvp-scope.md  hvdc-plan-session-handoff.md  hvdc-silent-ignore-dispatch-constraint.md  milestone-7-hvdc-status.md  writing-style-preferences.md
notebooks/: benchmark_opf.py  cvxopf_demo.py
plans/: Design_spec_CLAUDE_specification.md  milestone-15-full-lossy-hvdc.md  milestone-16-unify-components.md  milestone-17-hierarchical-dc-ac.md  milestone-4-branch-limits.md  milestone-5-storage.md  milestone-7-hvdc-plan-critique.md  milestone-7-hvdc.md  milestone-8-nondispatchable.md  milestone-9-sparse-pq.md
scripts/: README.md  _probe_case9_branches.py  _probe_dcline_branches.py  _probe_dcline_slack.py  _probe_dcline_transform.py  _probe_dcline_unitypf.py  generate_examples_readme.py  generate_pypower_fixtures.py  generate_testcases.py
tests/: conftest.py  test_all_cases_dc.py  test_component_contract.py  test_cost.py  test_generator.py  test_hvdc.py  test_network.py  test_nondispatchable.py  test_problem_dc.py  test_problem_dc_multistep.py  (+9 more)
(+114 files in other folders)
